# wyklad-bazy-wektorowe-2026

./: 01_app.py  01_ingest.py  01_run_demo.sh  02_embeddings.py  03_vector_similarity.py  04_ann_vs_exact_time_comparison.py  05_sample_lancedb_usage.py  06_hybrid_search_rrf.py  06_visualize_chunking.py  07_metadata_search.py  07_visualize_metadata_filtering.py  08_visualize_chunking.py  pyproject.toml
data/: Algorytmy_tekstowe.txt  Database fundamentals.txt  Digital Technology.txt  Elements of statistical machine learning.txt  Elementy statystycznego uczenia naszynowego.txt  English.txt  French.txt  Jezyk Angielski.txt  Jezyk francuski.txt  Jezyk hiszpanski.txt  Operating Systems.txt  Python.txt  Spanish.txt  Systemy operacyjne.txt  Textual algorithms .txt
